# AIOAM

./: CMakeLists.txt  README.md  defs.h  khinsiderScrapper.cpp  main.cpp  mainWindow.cpp  mainWindow.h  processingFile.html  subProcessingFile.html
backend/: khinsiderScrapper.cpp
